# kaiku

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  README_zh.md  architecture.md  asr2clip.conf.example  environment.yaml  kaiku.conf.example  pyproject.toml
.github/workflows/: lint.yml  publish.yml
asr2clip/: asr2clip.py  audio.py  config.py  config_types.py  daemon.py  diarize.py  logging.py  output.py  robust.py  toggle.py  transcribe.py  utils.py  vad.py
asr2clip/backends/: __init__.py  mock.py  whisper_cpp.py  whisperx.py
asr2clip/local_asr/: __init__.py  app.py
asr2clip/postprocessors/: __init__.py  claude_code.py  mock.py  none.py
asr2clip/preprocessors/: __init__.py  base.py  deepfilter.py  noisereduce.py  none.py  pyrnnoise.py
asr2clip/recorders/: __init__.py  arecord.py  base.py  mock.py  sounddevice_recorder.py
kaiku/: audio.py  config.py  config_types.py  daemon.py  fixtures.py  kaiku.conf.example  kaiku.py  logging.py  output.py  robust.py  toggle.py  transcribe.py  utils.py  vad.py
kaiku/_vendor/httpclient/: httpclient.py
kaiku/_vendor/yaml/: yaml.py
kaiku/backends/: __init__.py  mock.py  whisper_cpp.py  whisperx.py
kaiku/local_asr/: __init__.py  app.py  engine.py  model_registry.py
kaiku/postprocessors/: __init__.py  base.py  claude_code.py  mock.py  openai_compat.py
kaiku/preprocessors/: __init__.py  base.py  deepfilter.py  noisereduce.py  pyrnnoise.py
kaiku/recorders/: __init__.py  arecord.py  base.py  sounddevice_recorder.py
test_data/: group-2p-1.txt  group-2p-2.txt  group-3p-1.txt  solo-1.txt  solo-2.txt  solo-jfk.txt
tests/: README.md  conftest.py  smoke_test.py  test_e2e.py  test_e2e_extended.py  test_no_clipboard_config.py  test_output_clipboard.py
tests/e2e/: conftest.py  test_file_transcription.py  test_postprocessing_e2e.py
tests/fixtures/transcripts/: demo-1p-127s-en-gb0.txt  demo-2p-023s-en-courtney.txt  demo-3p-051s-fi-metro.txt  demo-3p-096s-de-eoc.txt  demo-4p-030s-en-ami.txt  demo-4p-082s-en-agni.txt
tests/integration/: test_cli_patterns.py  test_config_error_cases.py  test_main_pipelines.py
tests/unit/: test_config_pipeline.py  test_config_refactor.py  test_diarize.py  test_mock_backend.py  test_mock_postprocessor.py  test_postprocessor_backends.py  test_postprocessors.py  test_recorders.py  test_robust_and_config.py  test_transcribe_and_whisper_cpp.py
