[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["asr2clip", "asr2clip.backends", "asr2clip.preprocessors", "asr2clip.local_asr", "asr2clip._vendor", "asr2clip._vendor.yaml", "asr2clip._vendor.httpclient"]

[tool.setuptools.dynamic]
version = { attr = "asr2clip.__version__" }

[project]
name = "asr2clip"
dynamic = ["version"]
authors = [{ name = "Oaklight", email = "oaklight@gmx.com" }]
description = "A real-time speech-to-text clipboard tool."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GNU Affero General Public License v3" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24.4",
    "copykitten>=1.0.0",
    "sounddevice>=0.5.1",
    "pydub>=0.25.1",
    "audioop-lts>=0.2.1; python_version>='3.13'",
]

[project.urls]
Homepage = "https://github.com/Oaklight/asr2clip"

[project.scripts]
asr2clip = "asr2clip.asr2clip:main"
asr2clip-serve = "asr2clip.local_asr:cli_main"

[project.optional-dependencies]
dev = [
    "complexipy>=5.2.0",
    "ruff>=0.15.0",
    "ty>=0.0.31",
    "build>=1.2.2.post1",
    "twine>=6.1.0",
]
vad = [
    "sherpa-onnx>=1.10.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "python-multipart>=0.0.6",
]
noisereduce = [
    "noisereduce>=3.0.0",
    "scipy>=1.10.0",
]
pyrnnoise = [
    "pyrnnoise>=0.1.0",
    "scipy>=1.10.0",   # used for 16 kHz ↔ 48 kHz resampling
]
deepfilter = [
    "deepfilternet>=0.5.6",
    # resampling done via torchaudio (already a deepfilternet dependency)
]
enhance = [
    "asr2clip[noisereduce,pyrnnoise,deepfilter]",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "UP", "C901"]
ignore = ["UP007", "E501"]

[tool.ruff.lint.per-file-ignores]
"asr2clip/_vendor/*" = ["E", "F", "UP", "C901"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
include = ["asr2clip"]
exclude = ["asr2clip/local_asr", "asr2clip/_vendor", "asr2clip/vad.py"]

[tool.complexipy]
paths = ["asr2clip"]
exclude = ["_vendor"]
max-complexity-allowed = 15
