[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "kaiku",
    "kaiku.backends",
    "kaiku.preprocessors",
    "kaiku.postprocessors",
    "kaiku.recorders",
    "kaiku.local_asr",
    "kaiku._vendor",
    "kaiku._vendor.yaml",
    "kaiku._vendor.httpclient",
]

[tool.setuptools.package-data]
kaiku = ["kaiku.conf.example"]

[tool.setuptools.dynamic]
version = { attr = "kaiku.__version__" }

[project]
name = "kaiku"
dynamic = ["version"]
authors = [
    { name = "Samuel Sydänlammi", email = "samuel.sydanlammi@iki.fi" },
    { name = "Oaklight", email = "oaklight@gmx.com" },
]
maintainers = [{ name = "Samuel Sydänlammi", email = "samuel.sydanlammi@iki.fi" }]
description = "Local-first speech-to-text CLI: capture, denoise, transcribe, post-process, clipboard."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GNU Affero General Public License v3 or later" }
keywords = ["speech", "asr", "whisper", "dictation", "clipboard", "transcription"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "numpy>=1.24.4",
    "copykitten>=1.0.0",
    "sounddevice>=0.5.1",
    "pydub>=0.25.1",
    "audioop-lts>=0.2.1; python_version>='3.13'",
]

[project.urls]
Homepage = "https://github.com/sjjsy/kaiku"
Repository = "https://github.com/sjjsy/kaiku"
Documentation = "https://github.com/sjjsy/kaiku#readme"
Issues = "https://github.com/sjjsy/kaiku/issues"
Changelog = "https://github.com/sjjsy/kaiku/releases"

[project.scripts]
kaiku = "kaiku.kaiku:main"
kaiku-serve = "kaiku.local_asr:cli_main"

[project.optional-dependencies]
dev = [
    "complexipy>=5.2.0",
    "ruff>=0.15.0",
    "ty>=0.0.31",
]
test = [
    "pytest>=7.4",
    "pytest-mock>=3.12",
]
vad = [
    "sherpa-onnx>=1.10.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "python-multipart>=0.0.6",
]
noisereduce = [
    "noisereduce>=3.0.0",
    "scipy>=1.10.1",
]
pyrnnoise = [
    "pyrnnoise>=0.1.0",
    "scipy>=1.10.1",
]
deepfilter = [
    "deepfilternet>=0.5.6",
]
enhance = [
    "kaiku[noisereduce,pyrnnoise,deepfilter]",
]
diarize = [
    "whisperx>=3.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
addopts = "-ra -q"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "UP", "C901"]
ignore = ["UP007", "E501"]

[tool.ruff.lint.per-file-ignores]
"kaiku/_vendor/*" = ["E", "F", "UP", "C901"]

[tool.ruff.lint.mccabe]
max-complexity = 55

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
include = ["kaiku"]
exclude = ["kaiku/local_asr", "kaiku/_vendor", "kaiku/vad.py"]

[tool.complexipy]
paths = ["kaiku"]
exclude = ["_vendor"]
max-complexity-allowed = 55
